--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,18 @@
-# Prerequisites
-*.d
+# Vim swap files
+*.swp
+*.swo
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Temporary files
+*.tmp
+*.bak
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# macOS junk
+.DS_Store
 
-# Precompiled Headers
-*.gch
-*.pch
+# Editor settings
+.vscode/
+.idea/
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+# Backup markdown files
+*.md~
 
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
-
-# debug information files
-*.dwo
